src/tests/fixtures/preprocessor/errors/error11.cpp
typedef int s32;
unsigned s32 thing;
